--- a/index.html
+++ b/index.html
@@ -21,12 +21,29 @@
                 <!-- topbar sx -->
                 <div class="left_header">
                     <div class="left user_info">
-                        <div class="header_img"></div>
+                        <div class="header_img">
+                            <img src="img/avatar_io.jpg" alt="profile-pic">
+                        </div>
+                        <div class="left name">
+                            <h3>Federica</h3>
+                        </div>
                     </div>
-                    <div class="left header_actions"></div>
+                    <div class="left header_actions">
+                        <ul>
+                            <li><i class="fas fa-circle-notch"></i></li>
+                            <li><i class="fas fa-comment-alt"></i></li>
+                            <li><i class="fas fa-ellipsis-v"></i></li>
+                        </ul>
+                    </div>
                 </div>
                 <!-- /topbar sx -->
-                <div class="left_sub_header"></div>
+                <div class="left_sub_header">
+                        <i class="fas fa-bell-slash"></i>
+                    <ul>
+                        <li>Ricevi notifiche di nuovi messaggi</li>
+                        <li>Attiva notifiche desktop</li>
+                    </ul>
+                </div>
                 <div class="left_search"></div>
                 <!-- sezione contatti -->
                 <div class="contacts">
@@ -38,9 +55,21 @@
                 <!-- topbar dx-->
                 <div class="right_header">
                     <div class="right user_info">
-                        <div class="header_img"></div>
+                        <div class="header_img">
+                            <img src="img/avatar_1.jpg" alt="avatar">
+                        </div>
+                        <ul>
+                            <li class="right contact_name">Michele</li>
+                            <li class="right last_access">Ultimo accesso oggi alle 10/01/2020 16:15:22</li>
+                        </ul>
                     </div>
-                    <div class="right header_actions"></div>
+                    <div class="right header_actions">
+                        <ul>
+                            <li><i class="fas fa-search"></i></li>
+                            <li><i class="fas fa-paperclip"></i></li>
+                            <li><i class="fas fa-ellipsis-v"></i></li>
+                        </ul>
+                    </div>
                 </div>
                 <!-- /topbar dx -->
                 <div class="chat"></div>
