--- a/index.html
+++ b/index.html
@@ -86,8 +86,32 @@
                     </div>
                 </div>
                 <!-- /topbar dx -->
-                <div class="chat"></div>
-                <div class="chat_write"></div>
+                <div class="chat">
+                    <div class="sent">
+                        <div class="message">
+                            <p>Hai portato a spasso il cane?</p>
+                        </div>
+                        <div clas s="message">
+                            <p>Ricordati di dargli da mangiare</p>
+                        </div>
+                    </div>
+                    <div class="received">
+                        <div class="message received">
+                            <p>Tutto fatto!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="chat_write">
+                    <div class="emoticons">
+                        <i class="far fa-smile"></i>
+                    </div>
+                    <div class="write">
+                        <input type="text" placeholder="Scrivi un messaggio">
+                    </div>
+                    <div class="audio">
+                        <i class="fas fa-microphone"></i>
+                    </div>
+                </div>
 
             </div>
 
