--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                      <li>{{contacts[index].name}}</li>
                      <li>Lorem ipsum ..</li>
                  </ul>
-                 <p>Ultimo accesso</p>                 
+                 <p class="last_access">Ultimo accesso</p>                 
                 </div>
                 </div>
                 <!-- /sezione contatti -->
@@ -87,17 +87,20 @@
                 </div>
                 <!-- /topbar dx -->
                 <div class="chat">
-                    <div class="sent">
-                        <div class="message">
+                    <div class="message_right">
+                        <div class="message sent">
                             <p>Hai portato a spasso il cane?</p>
+                            <p>10/01/2020 16:15:22</p>
                         </div>
-                        <div clas s="message">
+                        <div class="message sent">
                             <p>Ricordati di dargli da mangiare</p>
+                            <p>10/01/2020 16:15:22</p>
                         </div>
                     </div>
-                    <div class="received">
+                    <div class="message_left">
                         <div class="message received">
                             <p>Tutto fatto!</p>
+                            <p>10/01/2020 16:15:22</p>
                         </div>
                     </div>
                 </div>
