--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                  <img :src="getImage(index)" alt="contact-pic">
                  <ul>
                      <li>{{contacts[index].name}}</li>
-                     <li>Lorem ipsum ..</li>
+                     <li>{{getLastMessage(contact)}}</li>
                  </ul>
                  <p class="last_access">Ultimo accesso</p>                 
                 </div>
