--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="left_search">
                     <div class="searchbar">
                         <button><i class="fas fa-search"></i></button>
-                        <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="searchInput" @keydown="filterItem(searchInput)">
+                        <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="searchInput" @keyup="filterItem(searchInput)">
                     </div>
                 </div>
                 <!-- /pannello ricerca contatti -->
